--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,19 +51,26 @@ fieldset {
   border-bottom:1px solid #ddd;
 }
 .ghost-button {
-  background-color: #fff2cc;
-  border:2px solid #ddd;
-  padding:10px 30px;
+  background: linear-gradient(to right,#196BCA ,#6433E0);
+  background-color: #196BCA;
   width: 100%;
-  min-width: 350px;
-  -webkit-transition: all 0.1s ease-in-out;
-  -moz-transition: all 0.1s ease-in-out;
-  -ms-transition: all 0.1s ease-in-out;
-  -o-transition: all 0.1s ease-in-out;
-  transition: all 0.1s ease-in-out;
+  color: #fff;
+  font-family: Trebuchet MS;
+  font-size: 18px;
+  font-weight: 800;
+  font-style: normal;
+  text-decoration: none;
+  padding: 30px 31px;
+  border: 1px solid #000;
+  border-radius: 10px;
+  display: inline-block;
 }
 .ghost-button:hover {
-  border:2px solid #515151;
+  background: linear-gradient(to right,#5482d0 ,#7d5ee3);
+  background-color: #5482d0;
+}
+.ghost-button:active{
+  transform: scale(0.95)
 }
 p {
   color: #E64A19;
